--- a/msmewb/templates/CSverifiedApplications.html
+++ b/msmewb/templates/CSverifiedApplications.html
@@ -101,6 +101,8 @@
 </nav>
  </head>
  <body style="background: #f5f5f5;">
+ <form action="" method="POST">
+ {% csrf_token %}
    <div class="container">
      <div class="row col text-center">
        <table class="table table-hover table-striped table-bordered" style="background-color: white; margin-top:50px;">
@@ -128,7 +130,7 @@
            <td>{{appln.Status}}</td>
            <td><button class="btn btn-primary" type="submit" name="DocumentVerification" value={{appln.Application_ID}}>Document Verified</button>
           <button class="btn btn-primary" type="submit" name="Reject" value={{appln.Application_ID}}>>Reject</button>
-          <button class="btn btn-primary" type="submit" name="DocumentsAwaiting" value={{appln.Application_ID}}>Documents Awaiting
+          <button class="btn btn-primary" type="submit" name="DocumentsAwaiting" value={{appln.Application_ID}}>Documents Awaiting</button>
           </td>
          </tr>
          {% endfor%}
@@ -144,6 +146,7 @@
    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
- </body>
+ </form> 
+</body>
 </html>
  {% endblock %}
