--- a/msmeapp/templates/DashBoard1.html
+++ b/msmeapp/templates/DashBoard1.html
@@ -25,6 +25,7 @@
             <th>Due Date</th>
             &nbsp;&nbsp;&nbsp;&nbsp;
             <th>EMI</th>
+            <th>Operation</th>
           </tr>
         </thead>
         <tbody>
