--- a/msmewb/templates/CustomerDisplayApplications.html
+++ b/msmewb/templates/CustomerDisplayApplications.html
@@ -42,97 +42,295 @@
            </div>
     </body>
  </html>-->
- <!doctype html>
+<!doctype html>
 <html lang="en">
- <head>
-   <!-- Required meta tags -->
-   <meta charset="utf-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-   <!-- Bootstrap CSS -->
-   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-   <style type="text/css">
-      nav{
-       background: white;
-      }
-       label{
-       color: #005eb8;
-     }
-     .img-logo{
-         width: 188px;
-         margin-top: 10px;
-         margin-bottom: 10px;
-     }
-     .title-form {
-     width: 75%;
-     position: relative;
-     left:10%;
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-     font-size: 24px!important;
-     display: inline-block;
-     color: #005eb8;
-     font-weight: normal;
-     font-family: 'MaaxRounded-medium';
-     text-align: center;
-     margin-bottom: 40px;
-     }
-   </style>
-   <nav class="navbar bg-faded">
- <div class="container">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <style type="text/css">
+    nav {
+      background: white;
+    }
 
-   <ul class="nav navbar-nav navbar-logo mx-auto">
-     <li class="nav-item">
-       <a href="https://uangteman.com"><img class="img-logo" src="https://uangteman.com/assets/frontend/statics/v4/images/rebranding/logo_rebranding.png" alt="Money friend"></a>
-     </li>
-   </ul>
-   <form action="" method="POST">
-    {% csrf_token %}
-    <button type="submit" name="Logout" class="btn btn-danger" style="width: 100px; height: 40px; border-radius:15px; margin-left: 100px;">Logout</button>
-  </form>
- </div>
-</nav>
- </head>
- <body style="background: #f5f5f5;">
-   <div class="container">
-     <div class="row col text-center">
-       <table class="table table-hover table-striped table-bordered" style="background-color: white; margin-top:50px;">
+    label {
+      color: #005eb8;
+    }
+
+    .img-logo {
+      width: 188px;
+      margin-top: 10px;
+      margin-bottom: 10px;
+    }
+
+    .title-form {
+      width: 75%;
+      position: relative;
+      left: 10%;
+
+      font-size: 24px !important;
+      display: inline-block;
+      color: #005eb8;
+      font-weight: normal;
+      font-family: 'MaaxRounded-medium';
+      text-align: center;
+      margin-bottom: 40px;
+    }
+  </style>
+  <nav class="navbar bg-faded">
+    <div class="container">
+
+      <ul class="nav navbar-nav navbar-logo mx-auto">
+        <li class="nav-item">
+          <a href="https://uangteman.com"><img class="img-logo"
+              src="https://uangteman.com/assets/frontend/statics/v4/images/rebranding/logo_rebranding.png"
+              alt="Money friend"></a>
+        </li>
+      </ul>
+      <form action="" method="POST">
+        {% csrf_token %}
+        <button type="submit" name="Logout" class="btn btn-danger"
+          style="width: 100px; height: 40px; border-radius:15px; margin-left: 100px;">Logout</button>
+      </form>
+    </div>
+  </nav>
+</head>
+
+<body style="background: #f5f5f5;">
+  <div class="container">
+    <div class="row col text-center">
+      <table class="table table-hover table-striped table-bordered" style="background-color: white; margin-top:50px;">
         <thead>
-         <tr>
-           <th scope="col">Application Id</th>
-           <th scope="col">Amount</th>
-           <th scope="col">Tenure</th>
-           <th scope="col">Date of Application</th>
-           <th scope="col">Purpose</th>
-           <th scope="col">Frequency</th>
-           <th scope="col">Status</th>
-           <th scope="col">Operations</th>
-         </tr>
+          <tr>
+            <th scope="col">Application Id</th>
+            <th scope="col">Amount</th>
+            <th scope="col">Tenure</th>
+            <th scope="col">Date of Application</th>
+            <th scope="col">Purpose</th>
+            <th scope="col">Frequency</th>
+            <th scope="col">Status</th>
+            <th scope="col">Operations</th>
+          </tr>
         </thead>
-       <tbody>
-         {% for appln in applications %}
-         <tr>
-           <td>{{appln.Application_ID}}</td>
-           <td>{{appln.Amount}}</td>
-           <td>{{appln.Tenure}}</td>
-           <td>{{appln.Date_Application}}</td>
-           <td>{{appln.Purpose}}</td>
-           <td>{{appln.Frequency}}</td>
-           <td>{{appln.Status}}</td>
-           <td><button class="btn btn-primary" value={{appln.Application_ID}}><a href="{% url 'CustomerDetails' %}?appln_id={{appln.Application_ID}}" style="color: white;">Details</a></button> </td>
-         </tr>
-         {% endfor%}
-      </tbody>
-</table>
+        <tbody>
+          {% for appln in applications %}
+          <tr>
+            <td>{{appln.Application_ID}}</td>
+            <td>{{appln.Amount}}</td>
+            <td>{{appln.Tenure}}</td>
+            <td>{{appln.Date_Application}}</td>
+            <td>{{appln.Purpose}}</td>
+            <td>{{appln.Frequency}}</td>
+            <td>{{appln.Status}}</td>
+            <td>
+              <button class="btn btn-primary" value={{appln.Application_ID}}><a
+                  href="{% url 'CustomerDetails' %}?appln_id={{appln.Application_ID}}"
+                  style="color: white;">Details</a></button>
+              <button type="button" class="btn btn-primary" value={{appln.Application_ID}} data-toggle="modal"
+                onclick="fillData({{appln}})" data-target="#myModal">Edit</button>
+              <div class="modal fade" id="myModal" role="dialog">
+                <div class="modal-dialog">
+
+                  <!-- Modal content-->
+                  <form action="" method="POST">
+                    {% csrf_token %}
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <h4 class="modal-title">Edit Details</h4>
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                      </div>
+                      <div class="modal-body">
+                        <ul class="nav nav-tabs">
+                          <li class="active"><a data-toggle="tab" href="#loan">Loan</a></li>
+                          <li><a data-toggle="tab" href="#business">Business</a></li>
+                          <li><a data-toggle="tab" href="#menu2">Menu 2</a></li>
+                          <li><a data-toggle="tab" href="#menu3">Menu 3</a></li>
+                        </ul>
+                        <div class="tab-content">
+                          <div id="loan" class="tab-pane fade in active">
+                            <div class="form-group">
+                              <label for="Amount">Loan Amount:</label>
+                              <input type="text" class="form-control" id="Amount">
+                            </div>
+                            <div class="form-group">
+                              <label for="Purpose">Purpose:</label>
+                              <select name="Purpose" id="Purpose" class="form-control form-control-lg" required>
+                                <option value="A">Expansion</option>
+                                <option value="B">Capital</option>
+                                <option value="C">Wages</option>
+                              </select>
+                            </div>
+                            <div class="form-group">
+                              <label for="Tenure">Tenure(6-12m):</label>
+                              <input type="text" id="Tenure" name="Tenure" class="form-control form-control-lg"
+                                required>
+                            </div>
+                            <div class="form-group">
+                              <label for="Frequency">Frequency:</label>
+                              <input type="text" id="Frequency" name="Frequency" class="form-control form-control-lg"
+                                required>
+                            </div>
+
+                          </div>
+                          <div id="business" class="tab-pane fade">
+                            <div class="form-group">
+                              <label for="BusniessName">Business Name:</label>
+                              <input type="text" id="BusinessName" name="BusinessName"
+                                class="form-control form-control-lg" placeholder='Business Name'>
+                              <br>
+                              <label for="BusinessContact">Business Mobile Number:</label>
+                              <input type="Number" id="Bmobile" name="Bmobile" placeholder='Business Contact'
+                                class="form-control form-control-lg">
+                              <br>
+                              <label for="BPAN">Business PAN:</label>
+                              <input type="text" id="BPAN" name="BPAN" placeholder='Business PAN ID'
+                                class="form-control form-control-lg">
+                              <br>
+                              <label for="B_est">Establishment Date</label>
+                              <input type="Date" id="B_est" name="B_est" class="form-control form-control-lg">
+                              <div>Business Address:<br>
+                                <label for="HNO">House No:</label>
+                                <input type="text" id="HNO" name="HNO" placeholder='House Number'
+                                  class="form-control form-control-lg">
+                                <label for="Area">Area:</label>
+                                <input type="text" id="area" name="area" placeholder='Area'
+                                  class="form-control form-control-lg">
+                                <br>
+                                <label for="Pincode">Pincode:</label>
+                                <input type="Number" id="pincode" name="pincode" placeholder='PINCODE'
+                                  class="form-control form-control-lg">
+                                <label for="Street">Street:</label>
+                                <input type="text" id="street" name="street" placeholder='Street'
+                                  class="form-control form-control-lg">
+                                <br>
+                                </select>
+                                <label for="State">State:</label>
+                                <select id="State" name="state" onchange="changeList(this,'City'); "
+                                  class="form-control form-control-lg">
+                                  <option value=""> </option>
+                                  <option value="AndhraPradesh">Andhra Pradesh</option>
+                                  <option value="ArunachalPradesh">Arunachal Pradesh</option>
+                                  <option value="Assam">Assam</option>
+                                  <option value="Bihar">Bihar</option>
+                                  <option value="Chhattisgarh">Chhattisgarh</option>
+                                  <option value="Goa">Goa </option>
+                                  <option value="Gujarat">Gujarat</option>
+                                  <option value="Haryana">Haryana</option>
+                                  <option value="HimachalPradesh">Himachal Pradesh</option>
+                                  <option value="JammuandKashmir">Jammu and Kashmir</option>
+                                  <option value="Jharkhand">Jharkhand</option>
+                                  <option value="Karnataka">Karnataka</option>
+                                  <option value="Kerala">Kerala</option>
+                                  <option value="MadhyaPradesh">Madhya Pradesh</option>
+                                  <option value="Maharashtra">Maharashtra</option>
+                                  <option value="Manipur">Manipur</option>
+                                  <option value="Meghalaya">Meghalaya</option>
+                                  <option value="Nagaland">Nagaland</option>
+                                  <option value="Odisha">Odisha</option>
+                                  <option value="Punjab">Punjab</option>
+                                  <option value="Rajasthan">Rajasthan </option>
+                                  <option value="Sikkim">Sikkim</option>
+                                  <option value="TamilNadu">Tamil Nadu</option>
+                                  <option value="Telangana">Telangana</option>
+                                  <option value="Tripura">Tripura</option>
+                                  <option value="UttarPradesh">Uttar Pradesh</option>
+                                  <option value="Uttarakhand">Uttarakhand</option>
+                                  <option value="WestBengal">West Bengal</option>
+                                </select>
+                                <br>
+                                <label for="City">City:</label>
+                                <select id="City" name="City" class="form-control form-control-lg">
+                                </select>
+                                <br>
+                                <label for="Country">Country:</label>
+                                <select id="Country" name="Country" class="form-control form-control-lg">
+                                  <option value=""> </option>
+                                  <option value="India">India</option>
+                                </select><label for="Purpose">Purpose:</label>
+                                <select name="Purpose" id="Purpose" class="form-control form-control-lg" required>
+                                  <option value="A">Expansion</option>
+                                  <option value="B">Capital</option>
+                                  <option value="C">Wages</option>
+                                </select>
+                              </div>
+                              <div class="form-group">
+                                <label for="Tenure">Tenure(6-12m):</label>
+                                <input type="text" id="Tenure" name="Tenure" class="form-control form-control-lg"
+                                  required>
+                              </div>
+                              <div class="form-group">
+                                <label for="Frequency">Frequency:</label>
+                                <input type="text" id="Frequency" name="Frequency" class="form-control form-control-lg"
+                                  required>
+                              </div>
+                            </div>
+                            </div>
+                            <div id="menu2" class="tab-pane fade">
+                              <h3>Menu 2</h3>
+                              <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
+                                laudantium, totam rem aperiam.</p>
+                            </div>
+                            <div id="menu3" class="tab-pane fade">
+                              <h3>Menu 3</h3>
+                              <p>Eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt
+                                explicabo.</p>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="modal-footer">
+                          <button type="submit" class="btn btn-primary">Save</button>
+                          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        </div>
+                      </div>
+                  </form>
+                </div>
+              </div>
+    </div>
+    </td>
+    </tr>
+    {% endfor%}
+    </tbody>
+    </table>
 
 
-     </div>
-   </div>
+  </div>
+  </div>
 
-   <!-- Optional JavaScript -->
-   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
- </body>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+
+
+
+  <script>
+    function fillData(appln) {
+      console.log(appln)
+      function setSelectedValue(selectObj, valueToSet) {
+        for (var i = 0; i < selectObj.options.length; i++) {
+          if (selectObj.options[i].value == valueToSet) {
+            selectObj.options[i].selected = true;
+            return;
+          }
+        }
+      }
+      document.getElementById("Amount").value = appln.Amount;
+      var purpose = appln.purpose;
+      var objSelect = document.getElementById("Purpose");
+      setSelectedValue(objSelect, purpose);
+      document.getElementById("Tenure").value = appln.Tenure;
+      document.getElementById("Frequency").value = appln.Frequency
+      document.getElementById("BusinessName").value = appln.business.B_name
+
+    }
+
+  </script>
+
+</body>
+
 </html>
- {% endblock %}
+{% endblock %}
