--- a/msmeapp/templates/FinancialDetails.html
+++ b/msmeapp/templates/FinancialDetails.html
@@ -63,50 +63,89 @@
 
 		<fieldset>
 			<h2>Assets</h2>
-			<label for="Fixed Assets">Fixed Assets:</label>
+			<label for="Fixed Assets">Tangible Assets:</label>
+			<div class="help-tip" style="right: -410px;">
+				<p>Value of assets in pyhsical form (in INR) .</p>
+			</div>
 			<input type="text" id="Fixed_Assets" name="Fixed_Assets" class="form-control form-control-lg">
 			<br>
 			<label for="Inangible Assets">Intangible Assets:</label>
+			<div class="help-tip" style="right: -395px;">
+				<p>Value of assets in non-pyhsical form (in INR) .</p>
+			</div>
 			<input type="text" id="Intangible_Assets" name="Intangible_Assets" class="form-control form-control-lg">
 			<br>
 			<label for="Current Assets">Current Assets:</label>
+			<div class="help-tip" style="right: -415px;">
+				<p>Value of assets that is expected to be converted into cash within an year (in INR).</p>
+			</div>
 			<input type="text" id="Current_Assets" name="Current_Assets" class="form-control form-control-lg">
 			<br>
 			<label for="Non Current Assets">Non Current Assets:</label>
+			<div class="help-tip" style="right: -380px;">
+				<p>Value of assets that is not expected to be converted into cash within an year (in INR).</p>
+			</div>
 			<input type="text" id="Non_Current_Assets" name="Non_Current_Assets" class="form-control form-control-lg">
 			<br>
 			<h2>Capital</h2>
 			<label for="Issued Capital">Issued Capital:</label>
+			<div class="help-tip" style="right: -420px;">
+				<p>Amount of shared capital issued to shareholders (in INR).</p>
+			</div>
 			<input type="text" id="Issued_Capital" name="Issued_Capital" class="form-control form-control-lg">
 			<br>
 			<label for="Paid Up Capital">Paid Up Capital:</label>
+			<div class="help-tip" style="right: -410px;">
+				<p>Amount of shared capital received from shareholders (in INR).</p>
+			</div>
 			<input type="text" id="Paid_Up_Capital" name="Paid_Up_Capital" class="form-control form-control-lg">
 			<br>
 			<h2>Liabilities</h2>
 			<label for="Term Liabilities">Term Liabilities:</label>
+			<div class="help-tip" style="right: -410px;">
+				<p> Amount due beyond a year or the normal operation period of the company (in INR).</p>
+			</div>
 			<input type="text" id="Term_Liabilities" name="Term_Liabilities" class="form-control form-control-lg">
 			<br>
 			<label for="Current Liabilities">Current Liabilities:</label>
+			<div class="help-tip" style="right: -390px;">
+				<p>Amount due to be paid to creditors within a period (in INR).</p>
+			</div>
 			<input type="text" id="Current_Liabilities" name="Current_Liabilities" class="form-control form-control-lg">
 			<br>
 			<h2>Cash Flow</h2>
 			<label for="Operations Activities">Operations Activities:</label>
+			<div class="help-tip" style="right: -368px;">
+				<p>Cash activities related to net income (in INR).</p>
+			</div>
 			<input type="text" id="Operations_Activities" name="Operations_Activities"
 				class="form-control form-control-lg">
 			<br>
 			<label for="Investing Activities">Investing Activities:</label>
+			<div class="help-tip" style="right: -382px;">
+				<p>Cash activities related to noncurrent assets (in INR).</p>
+			</div>
 			<input type="text" id="Investing_Activities" name="Investing_Activities"
 				class="form-control form-control-lg">
 			<br>
 			<label for="Financing Activities">Financing Activities:</label>
+			<div class="help-tip" style="right: -377px;">
+				<p>Cash activities related to noncurrent liabilities and owners’ equity (in INR).</p>
+			</div>
 			<input type="text" id="Financing_Activities" name="Financing_Activities"
 				class="form-control form-control-lg">
 			<br>
 			<h2>Reserves</h2>
 			<label for="Subsidy from government">Subsidy from government:</label>
+			<div class="help-tip" style="right: -332px;">
+				<p>Financial aid or support extended from Government (in INR).</p>
+			</div>
 			<input type="text" id="Subsidy_Gov" name="Subsidy_Gov" class="form-control form-control-lg">
 			<br>
 			<label for="General Reserves">General Reserves:</label>
+			<div class="help-tip" style="right: -400px;">
+				<p>Retained earnings kept aside out of company's profits (in INR).</p>
+			</div>
 			<input type="text" id="General_Reserves" name="General_Reserves" class="form-control form-control-lg">
 			<br>
 
